--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -36,5 +36,6 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-install(TARGETS ${PROJECT_NAME} DESTINATION lib)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION lib)
 install(FILES ${HEADER_FILES} DESTINATION include)
