Add runtime libraries to cmake-in

--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -27,7 +27,9 @@ set( HEADER_FILES ${INCLUDE_DIR}/cmd-api.h)
 set( SRC_FILES ${SRC_DIR}/cmd-api.cpp)
 
 set ( INSTALL_LIB lib )
-set ( INSTALL_LIBRARIES ${INSTALL_LIB}/${PROJECT_NAME}.lib )
+set ( INSTALL_BIN bin )
+set ( INSTALL_LIBRARIES ${INSTALL_LIB}/*.lib )
+set ( INSTALL_RUNTIME ${INSTALL_BIN}/*.dll )
 if (SHARED)
     add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
 ELSE()
@@ -45,9 +47,9 @@ configure_package_config_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/cmd-apiConfig.cmake
     INSTALL_DESTINATION ${INSTALL_CONFIG_FILE}
-    PATH_VARS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES
+    PATH_VARS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES INSTALL_RUNTIME
 )
-install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
+install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${INSTALL_BIN})
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${INSTALL_LIB})
 install(FILES
     ${HEADER_FILES}
