Fix to libraries name

--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -28,8 +28,8 @@ set( SRC_FILES ${SRC_DIR}/cmd-api.cpp)
 
 set ( INSTALL_LIB lib )
 set ( INSTALL_BIN bin )
-set ( INSTALL_LIBRARIES ${INSTALL_LIB}/*.lib )
-set ( INSTALL_RUNTIME ${INSTALL_BIN}/*.dll )
+set ( INSTALL_LIBRARIES ${INSTALL_LIB}/${PROJECT_NAME}.lib )
+set ( INSTALL_RUNTIME ${INSTALL_BIN}/${PROJECT_NAME}.dll )
 if (SHARED)
     add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
 ELSE()
