--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -32,11 +32,12 @@ set ( INSTALL_LIBRARIES ${INSTALL_LIB}/${PROJECT_NAME}.lib )
 if (SHARED)
     add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
     set ( INSTALL_RUNTIME ${INSTALL_BIN}/${PROJECT_NAME}.dll )
+    set( EXPORT_OBJECTS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES INSTALL_RUNTIME )
 ELSE()
     add_library(${PROJECT_NAME} STATIC ${SRC_FILES} ${HEADER_FILES})
-    set ( INSTALL_RUNTIME "" )
-
+    set( EXPORT_OBJECTS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES )
 ENDIF()
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIR})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
@@ -49,7 +50,7 @@ configure_package_config_file(
     ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfig.cmake.in
     ${CMAKE_CURRENT_BINARY_DIR}/cmd-apiConfig.cmake
     INSTALL_DESTINATION ${INSTALL_CONFIG_FILE}
-    PATH_VARS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES INSTALL_RUNTIME
+    PATH_VARS ${EXPORT_OBJECTS}
 )
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${INSTALL_BIN})
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${INSTALL_LIB})
