Update cmake.in to skip install runtime if not shared

--- a/cmd-api/cmd-apiConfig.cmake.in
+++ b/cmd-api/cmd-apiConfig.cmake.in
@@ -2,4 +2,6 @@
 
 set_and_check(cmd-api_INCLUDE_DIR "@PACKAGE_INSTALL_INCLUDE_DIR@")
 set_and_check(cmd-api_LIBRARIES "@PACKAGE_INSTALL_LIBRARIES@")
-set_and_check(cmd-api_RUNTIME "@PACKAGE_INSTALL_RUNTIME@")
+IF(DEFINED PACKAGE_INSTALL_RUNTIME)
+    set_and_check(cmd-api_RUNTIME "@PACKAGE_INSTALL_RUNTIME@")
+ENDIF()
