--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -29,7 +29,7 @@ set( SRC_FILES ${SRC_DIR}/cmd-api.cpp)
 set ( INSTALL_LIB lib )
 set ( INSTALL_BIN bin )
 set ( INSTALL_LIBRARIES ${INSTALL_LIB}/${PROJECT_NAME}.lib )
-if (DEFINED SHARED)
+if (SHARED)
     set (CMAKE_IN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfigShared.cmake.in)
     add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
     set ( INSTALL_RUNTIME ${INSTALL_BIN}/${PROJECT_NAME}.dll )
