Bugfix: dll export (#10)
* Add install_runtime only if shared

* Set install runtime when static build is chosen

* Add variable with exported objects

* Update cmake.in to skip install runtime if not shared

* Add cmakein for shared library

* Remove defined keyword

* Update changelog and version

--- a/cmd-api/CMakeLists.txt
+++ b/cmd-api/CMakeLists.txt
@@ -29,12 +29,17 @@ set( SRC_FILES ${SRC_DIR}/cmd-api.cpp)
 set ( INSTALL_LIB lib )
 set ( INSTALL_BIN bin )
 set ( INSTALL_LIBRARIES ${INSTALL_LIB}/${PROJECT_NAME}.lib )
-set ( INSTALL_RUNTIME ${INSTALL_BIN}/${PROJECT_NAME}.dll )
 if (SHARED)
+    set (CMAKE_IN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfigShared.cmake.in)
     add_library(${PROJECT_NAME} SHARED ${SRC_FILES} ${HEADER_FILES})
+    set ( INSTALL_RUNTIME ${INSTALL_BIN}/${PROJECT_NAME}.dll )
+    set( EXPORT_OBJECTS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES INSTALL_RUNTIME )
 ELSE()
+    set (CMAKE_IN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfig.cmake.in)
     add_library(${PROJECT_NAME} STATIC ${SRC_FILES} ${HEADER_FILES})
+    set( EXPORT_OBJECTS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES )
 ENDIF()
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDE_DIR})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
@@ -44,10 +49,10 @@ include(CPack)
 set(INSTALL_INCLUDE_DIR include)
 set(INSTALL_CONFIG_FILE cmake)
 configure_package_config_file(
-    ${CMAKE_CURRENT_SOURCE_DIR}/cmd-apiConfig.cmake.in
+    ${CMAKE_IN_FILE}
     ${CMAKE_CURRENT_BINARY_DIR}/cmd-apiConfig.cmake
     INSTALL_DESTINATION ${INSTALL_CONFIG_FILE}
-    PATH_VARS INSTALL_INCLUDE_DIR INSTALL_LIBRARIES INSTALL_RUNTIME
+    PATH_VARS ${EXPORT_OBJECTS}
 )
 install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION ${INSTALL_BIN})
 install(TARGETS ${PROJECT_NAME} LIBRARY DESTINATION ${INSTALL_LIB})
